--- a/IObitUnlocker.Wrapper/IObitUnlocker.Wrapper.csproj
+++ b/IObitUnlocker.Wrapper/IObitUnlocker.Wrapper.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +58,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -74,6 +76,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Resources_file\SysWOW64\Resources_SysWOW64.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Original_file\System32\Resources_System32_Win11.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Original_file\SysWOW64\Resources_SysWOW64_Win11.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
